--- a/css/main.css
+++ b/css/main.css
@@ -185,7 +185,8 @@ body {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.header-list__link:hover, .header-list__link:focus {
+.header-list__link:hover,
+.header-list__link:focus {
   color: var(--hover-buton-color);
 }
 
@@ -233,7 +234,8 @@ body {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.auth-nav__link:hover, .auth-nav__link:focus {
+.auth-nav__link:hover,
+.auth-nav__link:focus {
   color: var(--hover-buton-color);
 }
 
@@ -252,19 +254,20 @@ body {
 
 .hero {
   max-width: 1600px;
-      margin-left: auto;
+  margin-left: auto;
   margin-right: auto;
   padding-top: 200px;
   padding-bottom: 200px;
   text-align: center;
-      background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/foto-group.jpg);
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    url(../images/foto-group.jpg);
   background-color: #2f303a;
 }
 
 .hero-section__title {
   margin: 0 0 30px 0;
   font-style: normal;
-      font-weight: 900;
+  font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
   text-align: center;
@@ -294,7 +297,8 @@ body {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.hero-section__button:hover, .hero-section__button:focus {
+.hero-section__button:hover,
+.hero-section__button:focus {
   background: #188ce8;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
@@ -429,7 +433,8 @@ body {
   margin-right: 30px;
   text-align: center;
   background-color: var(--hero-title-color);
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
 
@@ -556,7 +561,8 @@ body {
   fill: var(--hover-buton-color);
 }
 
-.clients-list-link:hover, .clients-list-link:focus {
+.clients-list-link:hover,
+.clients-list-link:focus {
   border: 1px solid var(--hover-buton-color);
 }
 
@@ -608,10 +614,12 @@ body {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-button:hover, .portfolio-button:focus {
+.portfolio-button:hover,
+.portfolio-button:focus {
   background-color: #2196f3;
   color: #ffffff;
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
 }
 
@@ -623,8 +631,10 @@ body {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.card-link:hover, .card-link:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+.card-link:hover,
+.card-link:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .card-link:hover .product-description {
@@ -730,7 +740,8 @@ body {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-adress:hover, .footer-adress:focus {
+.footer-adress:hover,
+.footer-adress:focus {
   color: #2196f3;
 }
 
@@ -744,7 +755,8 @@ body {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-contacts:hover, .footer-contacts:focus {
+.footer-contacts:hover,
+.footer-contacts:focus {
   color: #2196f3;
 }
 
@@ -805,7 +817,8 @@ body {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-icon-font:hover, .footer-icon-font:focus {
+.footer-icon-font:hover,
+.footer-icon-font:focus {
   background-color: var(--hover-buton-color);
 }
 
@@ -866,7 +879,8 @@ body {
   transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form-button-footer:hover, .form-button-footer:focus {
+.form-button-footer:hover,
+.form-button-footer:focus {
   background: #188ce8;
 }
 
@@ -903,7 +917,8 @@ body {
   transform: translate(-50%, -50%);
   width: 528px;
   height: 581px;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   background-color: #ffffff;
   transition: opacity 250ms ease-in-out, visibility 250ms ease-in-out;
@@ -1105,7 +1120,8 @@ body {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.button-submit:hover, .button-submit:focus {
+.button-submit:hover,
+.button-submit:focus {
   background: #188ce8;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
